# options_dashboard

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  run_dashboard.sh
.claude/: settings.local.json
docs/: NOTES.md
src/options_dashboard/: __init__.py
tests/: __init__.py  test_app.py  test_utils.py
